[tool.poetry]
name = "mammogram"
version = "0.1.0"
description = ""
authors = ["solera <cvalverde@irvinecompany.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
